2011-08-02	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1880/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	pthread_rwlock_timedwrlock - not available, blocks.
	* psxtmrwlock04/.cvsignore, psxtmrwlock04/Makefile.am,
	psxtmrwlock04/init.c, psxtmrwlock04/psxtmrwlock04.doc: New files.

2011-08-02	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1878/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	pthread_rwlock_timedrdlock - not available, blocks.
	* psxtmrwlock03/.cvsignore, psxtmrwlock03/Makefile.am,
	psxtmrwlock03/init.c, psxtmrwlock03/psxtmrwlock03.doc: New files.

2011-08-02	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1875/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	pthread_rwlock_rdlock - not available, blocks.
	* psxtmrwlock02/.cvsignore, psxtmrwlock02/Makefile.am,
	psxtmrwlock02/init.c, psxtmrwlock02/psxtmrwlock02.doc: New files.

2011-08-02	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1874/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	multiple pthread_rwlock operations that can be done as single shot
	times.
	* psxtmrwlock01/.cvsignore, psxtmrwlock01/Makefile.am,
	psxtmrwlock01/init.c, psxtmrwlock01/psxtmrwlock01.doc: New files.

2011-07-29	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1863/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	pthread_barrier_wait - releasing, no preempt
	* psxtmbarrier03/.cvsignore, psxtmbarrier03/Makefile.am,
	psxtmbarrier03/init.c, psxtmbarrier03/psxtmbarrier03.doc: New files.

2011-07-29	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1859/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	pthread_barrier_wait - blocking
	* psxtmbarrier02/.cvsignore, psxtmbarrier02/Makefile.am,
	psxtmbarrier02/init.c, psxtmbarrier02/psxtmbarrier02.doc: New files.

2011-07-28	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1859/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of