@@ -1,3 +1,7 @@
+2011-08-04	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* psxtmrwlock03/init.c: Fix abstime issue. Time is now reasonable.
+
 2011-08-02	Ricardo Aguirre <el.mastin@ymail.com>
 
 	PR 1880/tests
